feat(wp-sync-db): installed WP Sync DB

--- a/trellis/group_vars/production/wordpress_sites.yml
+++ b/trellis/group_vars/production/wordpress_sites.yml
@@ -5,7 +5,7 @@
 wordpress_sites:
   rd.mrmu.com.tw:
     site_hosts:
-      - canonical: rd.mrmu.com.tw:
+      - canonical: rd.mrmu.com.tw
 #        redirects:
 #          - www.example.com
     local_path: ../site # path targeting local Bedrock site directory (relative to Ansible root)
